--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <P>
 Before that, I was a full-time Senior Researcher at Department of Computer Science, University of Oxford, reporting to <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>,
 and worked very shortly as a PostDoctoral Researcher in GIScience in Heidelberg University.
-    My Ph.D in Computer Science and Technology was awarded in Zhejiang University in 2016, with the supervision of Prof. <A href="https://person.zju.edu.cn/en/huajun">Huajun Chen</A> and Prof. Zhaohui Wu, and my Bachelor degree in Computer Science and Technology was awarded in Zhejiang University as well in 2011.
-    I was a visiting student of Department of Informatics, Zurich University from 2014 to 2015, with the supervision of Dr. Daning Hu.
+    My Ph.D in Computer Science and Technology was awarded in Zhejiang University in 2016 for the research on learning and reasoning for spatio-temporal data, and my Bachelor degree in Computer Science and Technology was awarded in Zhejiang University as well in 2011.
+    I was a visiting student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
 
 
@@ -83,7 +83,7 @@ My research interests focus on knowledge graphs (including ontologies):
     <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=36392">Project4</A>.
 </P>
 
-<P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology, funded by the following EPSRC OntoEm project. Email me your CV if you have interests.</P>
+<P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM, funded by the following EPSRC OntoEm project. Email me your CV if you have interests.</P>
 
 <h4>Research Grants and Projects</h4>
 <p><ul>
@@ -129,9 +129,9 @@ My research interests focus on knowledge graphs (including ontologies):
 </ul></p>
 <h4>Selective Journal Publications</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Jiaoyan Chen, Hang Dong, Janna Hastings, Ernesto Jiménez-Ruiz, Vanessa Lopez, Pierre Monnin, Catia Pesquita, Petr Škoda, Valentina Tamma. "Knowledge Graphs for the Life Sciences: Recent Developments, Challenges and Opportunities". Transactions on Graph Data and Knowledge. Accepted with Minor Revision. <A href="https://browse.arxiv.org/pdf/2309.17255.pdf">Pre-print</A></li>
-    <li style="margin-bottom:5px">Jeff Z Pan, Simon Razniewski, Jan-Christoph Kalo, Sneha Singhania, Jiaoyan Chen, Stefan Dietze, etc. "Large Language Models and Knowledge Graphs: Opportunities and Challenges". Transactions on Graph Data and Knowledge. Accepted with Minor Revision <A href="https://arxiv.org/abs/2308.06374">Pre-print</A> </li>
-    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Semantic Web Journal (minior revision). <A href="https://arxiv.org/abs/2307.03067">Pre-print</A> </li>
+    <li style="margin-bottom:5px">Jiaoyan Chen, Hang Dong, Janna Hastings, Ernesto Jiménez-Ruiz, Vanessa Lopez, Pierre Monnin, Catia Pesquita, Petr Škoda, Valentina Tamma. "Knowledge Graphs for the Life Sciences: Recent Developments, Challenges and Opportunities". Transactions on Graph Data and Knowledge (accepted with minor revision). <A href="https://browse.arxiv.org/pdf/2309.17255.pdf">Pre-print</A></li>
+    <li style="margin-bottom:5px">Jeff Z Pan, Simon Razniewski, Jan-Christoph Kalo, Sneha Singhania, Jiaoyan Chen, Stefan Dietze, etc. "Large Language Models and Knowledge Graphs: Opportunities and Challenges". Transactions on Graph Data and Knowledge (accepted with minor revision) <A href="https://arxiv.org/abs/2308.06374">Pre-print</A> </li>
+    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Semantic Web Journal (minor revision). <A href="https://arxiv.org/abs/2307.03067">Pre-print</A> </li>
     <li style="margin-bottom:5px">Norman Paton, Jiaoyan Chen, Zhenyu Wu. "Dataset Discovery and Exploration: A Survey". ACM Computing Surveys. 2023. <A href="https://dl.acm.org/doi/abs/10.1145/3626521">Paper</A> </li>
     <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Zero-shot and Few-shot Learning with Knowledge Graphs: A Comprehensive Survey". Proceedings of the IEEE (2023). <A href="https://ieeexplore.ieee.org/document/10144560">Paper</A></li>
     <li style="margin-bottom: 5px">Jiaoyan Chen, Yuan He, Yuxia Geng, Ernesto Jimenez-Ruiz, Hang Dong, Ian Horrocks. "Contextual Semantic Embeddings for Ontology Subsumption Prediction". World Wide Web Journal (2023). <A href="https://link.springer.com/article/10.1007/s11280-023-01169-9">Paper</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
@@ -165,7 +165,7 @@ My research interests focus on knowledge graphs (including ontologies):
     <li style="margin-bottom:5px">Zhuo Chen, Yufeng Huang, Jiaoyan Chen, Yuxia Geng, Wen Zhang, Yin Fang, Jeff Z Pan, Wenting Song, Huajun Chen. "DUET: Cross-modal Semantic Grounding for Contrastive Zero-shot Learning". AAAI 2023. <A href="https://arxiv.org/abs/2207.01328">Paper</A></li>
     <li style="margin-bottom:5px">Yuxia Geng, Jiaoyan Chen, Wen Zhang, Jeff Z. Pan, Mingyang Chen, Huajun Chen, Song Jiang. "Relational Message Passing for Fully Inductive Knowledge Graph Completion". ICDE 2023. <A href="https://arxiv.org/abs/2210.03994">Paper</A>, <A href="https://github.com/zjukg/RMPI">Github</A></li>
     <li style="margin-bottom:5px">Yuxia Geng, Jiaoyan Chen, Wen Zhang, Yajing Xu, Zhuo Chen, Jeff Z. Pan, Yufeng Huang, Feiyu Xiong, Huajun Chen. "Disentangled Ontology Embedding for Zero-shot Learning". KDD 2022. <A href="https://arxiv.org/abs/2206.03739">Paper</A>, <A href="https://github.com/zjukg/DOZSL">Github</A></li>
-    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ernesto Jimenez-Ruiz, Ali Hadian and Ian Horrocks. "Machine Learning-Friendly Biomedical Datasets for Equivalence and Subsumption Ontology Matching". ISWC 2022 (<b>Best Resource Paper Candidate</b>). <A href="https://arxiv.org/abs/2205.03447">Paper, </A><A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
+    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ernesto Jimenez-Ruiz, Ali Hadian and Ian Horrocks. "Machine Learning-Friendly Biomedical Datasets for Equivalence and Subsumption Ontology Matching". ISWC 2022 (<b>Best Resource Paper Nominee</b>). <A href="https://arxiv.org/abs/2205.03447">Paper, </A><A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
     <li style="margin-bottom:5px">Zhuo Chen, Yufeng Huang, Jiaoyan Chen, Yuxia Geng, Yin Fang, Jeff Z. Pan, Ningyu Zhang, Wen Zhang. "LaKo: Knowledge-driven Visual Question Answering via Late Knowledge-to-Text Injection". IJCKG 2022 (<b>Best Application Paper</b>). </li>
 <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Denvar Antonyrajah and Ian Horrocks. "BERTMap: A BERT-based Ontology Alignment System". AAAI 2022. <A href="https://arxiv.org/abs/2112.02682">Paper,</A><A href="https://github.com/KRR-Oxford/BERTMap">Github</A></li>
 <li style="margin-bottom:5px">Zhiyuan Qi, Ziheng Zhang, Jiaoyan Chen, Xi Chen, Yefeng Zheng. "PRASEMap: A Probabilistic Reasoning and Semantic Embedding based Knowledge Graph Alignment System". CIKM 2021 (Demo).<A href="https://arxiv.org/abs/2106.08801">Paper</A>,<A href="https://github.com/qizhyuan/PRASE-Python">Codes</A>, <A href="https://prasemap.qizhy.com/">PRASEMap Demo</A></li>
@@ -213,16 +213,18 @@ My research interests focus on knowledge graphs (including ontologies):
     <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". Department of Computer Science, The University of Manchester. 2023-2024. </li>
 <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/teaching/courses/2021-2022/ai/">"Artificial Inteligence"</A>. Department of Computer Science, University of Oxford. Group Class Teaching. Hilary Term 2022. </li>
 <li style="margin-bottom:5px">"Knowledge Representation and Reasoning (English)". Southeast University. Guest Lecture. 2021-2022, 2022-2023. </li>
-<li style="margin-bottom:5px">“Augmenting Machine Learning with Knowledge Base”, University of Aberdeen, 01/2018 (Guest Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
+<li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
 </ul></p>
 
 <h4>Student (Co-)Supervision</h4>
 <p><ul>
+    <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, to start in 01/2024)</li>
     <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD student from Xi'an Jiaotong University, to start in 12/2023)</li>
     <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li>
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 11/2022 - now)</li>
     <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - now)</li>
     <li style="margin-bottom:5px">Yuan He (PhD, Department of Computer Science, University of Oxford, 2020 - now)</li>
+    <br/>
     <li style="margin-bottom:5px"><A href="https://genggengcss.github.io/">Yuxia Geng</A> (PhD, College of Computer Science and Technology, Zhejiang University, 2018 - 2023)</li>
     <li style="margin-bottom:5px"><A href="https://sirius-labs.no/erik-bryhn-myklebust-phd-candidate/">Erik Bryhn Myklebust</A> (PhD, NIVA & SIRIUS, University of OSLO, 2019 - 2022) (external co-supervisor)</li>
     <li style="margin-bottom:5px">Mathias Jackermeier (MSc, Department of Computer Science, University of Oxford, 2022)</li>
