--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ My research interests focus on knowledge graphs (including ontologies):
 
 <h4>Academic Services</h4>
 <p><ul>
+    <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 -- now)</li>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li>
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- 2023).</li>
@@ -129,9 +130,9 @@ My research interests focus on knowledge graphs (including ontologies):
 </ul></p>
 <h4>Selective Journal Publications</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Jiaoyan Chen, Hang Dong, Janna Hastings, Ernesto Jiménez-Ruiz, Vanessa Lopez, Pierre Monnin, Catia Pesquita, Petr Škoda, Valentina Tamma. "Knowledge Graphs for the Life Sciences: Recent Developments, Challenges and Opportunities". Transactions on Graph Data and Knowledge (accepted with minor revision). <A href="https://browse.arxiv.org/pdf/2309.17255.pdf">Pre-print</A></li>
-    <li style="margin-bottom:5px">Jeff Z Pan, Simon Razniewski, Jan-Christoph Kalo, Sneha Singhania, Jiaoyan Chen, Stefan Dietze, etc. "Large Language Models and Knowledge Graphs: Opportunities and Challenges". Transactions on Graph Data and Knowledge (accepted with minor revision) <A href="https://arxiv.org/abs/2308.06374">Pre-print</A> </li>
     <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Semantic Web Journal (minor revision). <A href="https://arxiv.org/abs/2307.03067">Pre-print</A> </li>
+    <li style="margin-bottom:5px">Jiaoyan Chen, Hang Dong, Janna Hastings, Ernesto Jiménez-Ruiz, Vanessa Lopez, Pierre Monnin, Catia Pesquita, Petr Škoda, Valentina Tamma. "Knowledge Graphs for the Life Sciences: Recent Developments, Challenges and Opportunities". Transactions on Graph Data and Knowledge. Volume 1, Issue 1, 2023. <A href="https://doi.org/10.4230/TGDK.1.1.5">Paper</A></li>
+    <li style="margin-bottom:5px">Jeff Z Pan, Simon Razniewski, Jan-Christoph Kalo, Sneha Singhania, Jiaoyan Chen, Stefan Dietze, etc. "Large Language Models and Knowledge Graphs: Opportunities and Challenges". Transactions on Graph Data and Knowledge. Volume 1, Issue 1, 2023. <A href="https://doi.org/10.4230/TGDK.1.1.2">Paper</A> </li>
     <li style="margin-bottom:5px">Norman Paton, Jiaoyan Chen, Zhenyu Wu. "Dataset Discovery and Exploration: A Survey". ACM Computing Surveys. 2023. <A href="https://dl.acm.org/doi/abs/10.1145/3626521">Paper</A> </li>
     <li style="margin-bottom:5px">Jiaoyan Chen, Yuxia Geng, Zhuo Chen, Jeff Z. Pan, Yuan He, Wen Zhang, Ian Horrocks and Huajun Chen. "Zero-shot and Few-shot Learning with Knowledge Graphs: A Comprehensive Survey". Proceedings of the IEEE (2023). <A href="https://ieeexplore.ieee.org/document/10144560">Paper</A></li>
     <li style="margin-bottom: 5px">Jiaoyan Chen, Yuan He, Yuxia Geng, Ernesto Jimenez-Ruiz, Hang Dong, Ian Horrocks. "Contextual Semantic Embeddings for Ontology Subsumption Prediction". World Wide Web Journal (2023). <A href="https://link.springer.com/article/10.1007/s11280-023-01169-9">Paper</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
@@ -151,8 +152,13 @@ My research interests focus on knowledge graphs (including ontologies):
 </ul></p>
 <h4>Selective Conference/Workshop Publications</h4>
 <p><ul>
-    <li style="margin-bottom: 5px">Mathias Jackermeier, Jiaoyan Chen, Ian Horrocks. "Box^2EL: Concept and Role Box Embeddings for the Description Logic EL++". Under work. <A href="https://arxiv.org/abs/2301.11118">Pre-print</A>, <A href="https://github.com/KRR-Oxford/BoxSquaredEL">Github</A> </li>
-    <li style="margin-bottom: 5px">Wen Zhang, Jiaoyan Chen, Juan Li, Zezhong Xu, Jeff Z Pan, Huajun Chen. "Knowledge Graph Reasoning with Logics and Embeddings: Survey and Perspective". Under work. <A href="https://arxiv.org/pdf/2202.07412.pdf">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Yuan He, Zhangdie Yuan, Jiaoyan Chen, Ian Horrocks. "Language Models as Hierarchy Encoders". Under work. <A href="https://arxiv.org/abs/2401.11374">Pre-print</A></li>
+    <li style="margin-bottom: 5px">Yuxia Geng, Jiaoyan Chen, Yuhang Zeng, Zhuo Chen, Wen Zhang, Jeff Z Pan, Yuxiang Wang, Xiaoliang Xu. "Prompting Disentangled Embeddings for Knowledge Graph Completion with Pre-trained Language Model". Under work. <A href="https://arxiv.org/abs/2312.01837">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Mathias Jackermeier, Jiaoyan Chen, Ian Horrocks. "Dual Box Embeddings for the Description Logic EL++". The Web Conference 2024. <A href="https://arxiv.org/abs/2301.11118">Pre-print</A>, <A href="https://github.com/KRR-Oxford/BoxSquaredEL">Github</A> </li>
+    <li style="margin-bottom: 5px">Jingchuan Shi, Hang Dong, Jiaoyan Chen, Zhe Wu, Ian Horrocks. "Taxonomy Completion via Implicit Concept Insertion". The Web Conference 2024. </li>
+    <li style="margin-bottom: 5px">Lingbing Guo, Zhuo Chen, Jiaoyan Chen, Wen Zhang, Huajun Chen. "Revisit and Outstrip Entity Alignment: A Perspective of Generative Models". ICLR 2024. <A href="https://arxiv.org/abs/2305.14651">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Yong Guan, Freddy Lecue, Jiaoyan Chen Ru Li, Jeff Z. Pan. "Knowledge-aware Neuron Interpretation for Scene Classification". AAAI 2024. </li>
+    <li style="margin-bottom: 5px">Wen Zhang, Jiaoyan Chen, Juan Li, Zezhong Xu, Jeff Z Pan, Huajun Chen. "Knowledge Graph Reasoning with Logics and Embeddings: Survey and Perspective". 2023. <A href="https://arxiv.org/pdf/2202.07412.pdf">Pre-print</A> </li>
     <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Ian Horrocks. "Ontology Enrichment from Texts: A Biomedical Dataset for Concept Discovery and Placement". CIKM 2023 (<b>Best Resource Paper Runner-up</b>). <A href="https://arxiv.org/abs/2306.14704">Paper</A>, <A href="https://zenodo.org/record/8228005">Dataset</A> </li>
     <li style="margin-bottom: 5px">Hang Dong, Jiaoyan Chen, Yuan He, Yinan Liu, Ian Horrocks. "Reveal the Unknown: Out-of-Knowledge-Base Mention Discovery with Entity Linking Authors". CIKM 2023. <A href="https://arxiv.org/abs/2302.07189">Paper</A>, <A href="https://github.com/KRR-Oxford/BLINKout">Github</A> </li>
     <li style="margin-bottom: 5px">Yuan He, Jioayan Chen, Hang Dong, Ian Horrocks. "Exploring Large Language Models for Ontology Alignment". ISWC 2023 (Poster). <A href="https://browse.arxiv.org/pdf/2309.07172.pdf">Paper</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">Github</A></li>
@@ -180,7 +186,8 @@ My research interests focus on knowledge graphs (including ontologies):
 <li style="margin-bottom:5px">Jiaoyan Chen, Freddy Lecue, Yuxia Geng, Jeff Z. Pan and Huajun Chen. "Ontology-guided Semantic Composition for Zero-Shot Learning", KR 2020 -- Special Session KR and Machine Learning <A href="https://arxiv.org/abs/2006.16917">Paper</A>,<A href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/KR20-Record.mov">Video</A> </li>
 <li style="margin-bottom:5px">Ernesto Jiménez-Ruiz, Oktie Hassanzadeh, Vasilis Efthymiou, Jiaoyan Chen and Kavitha Srinivas. "SemTab 2019: Resources to Benchmark Tabular Data to Knowledge Graph Matching Systems." ESWC 2020. <A href="https://openaccess.city.ac.uk/id/eprint/23907/1/">Paper</A> </li>
 <li style="margin-bottom:5px">Jiaoyan Chen, Xi Chen, Ian Horrocks, Ernesto Jiménez-Ruiz and Erik B. Myklebus. "Correcting Knowledge Base Assertions." The Web Conference (WWW) 2020. <A href="https://arxiv.org/abs/2001.06917">Paper</A>, <A href="https://github.com/ChenJiaoyan/KG_Curation">Github</A></li>
-<li style="margin-bottom:5px">Ernesto Jimenez-Ruiz, Asan Agibetov, Jiaoyan Chen, Matthias Samwald and Valerie Cross. "Dividing the Ontology Alignment Task with Semantic Embeddings and Logic-based Modules." the 24th European Conference on Artificial Intelligence (ECAI) 2020.</li>
+<li style="margin-bottom:5px">Ernesto Jimenez-Ruiz, Asan Agibetov, Jiaoyan Chen, Matthias Samwald and Valerie Cross. "Dividing the Ontology Alignment Task with Semantic Embeddings and Logic-based Modules." The 24th European Conference on Artificial Intelligence (ECAI) 2020.</li>
+<li style="margin-bottom:5px">Zhiquan Ye, Yuxia Geng, Jiaoyan Chen, Jingmin Chen, Xiaoxiao Xu, Suhang Zheng, Feng Wang, Jun Zhang, Huajun Chen. "Zero-shot Text Classification via Reinforced Self-training". ACL 2020. <A href="https://aclanthology.org/2020.acl-main.272/">Paper</A> </li>
 <li style="margin-bottom:5px">Jiaoyan Chen, Ernesto Jiménez-Ruiz and Ian Horrocks. "Canonicalizing Knowledge Base Literals." International Semantic Web Conference (ISWC) 2019. <A href="https://arxiv.org/abs/1906.11180">Paper</A>, <A href="https://github.com/ChenJiaoyan/KG_Curation">Github</A></li>
 <li style="margin-bottom:5px">Erik B. Myklebust, Ernesto Jiménez-Ruiz, Jiaoyan Chen, Raoul Wolf, Knut Erik Tollefsen. "Knowledge Graph Embedding for Ecotoxicological Effect Prediction." International Semantic Web Conference (ISWC) 2019. <b>In-Use Track Best Student Paper</b></li>
 <li style="margin-bottom:5px">Jiaoyan Chen, Ernesto Jiménez-Ruiz, Ian Horrocks, and Charles Sutton. "Learning Semantic Annotations for Tabular Data." IJCAI 2019. <A href="https://github.com/alan-turing-institute/SemAIDA">Github</A>, <A href="https://arxiv.org/abs/1906.00781">Paper</A></li>
@@ -218,9 +225,9 @@ My research interests focus on knowledge graphs (including ontologies):
 
 <h4>Student (Co-)Supervision</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, to start in 01/2024)</li>
+    <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, to start in 04/2024)</li>
     <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD student from Xi'an Jiaotong University, to start in 12/2023)</li>
-    <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li>
+   <!-- <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li> -->
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 11/2022 - now)</li>
     <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - now)</li>
     <li style="margin-bottom:5px">Yuan He (PhD, Department of Computer Science, University of Oxford, 2020 - now)</li>
