--- a/index.html
+++ b/index.html
@@ -76,14 +76,10 @@ My research interests focus on knowledge graphs (including ontologies):
 </p>
 
 <P>
-    I am <b>recruiting PhD students</b> in UoM! All the knowledge graph related topics are very welcomed. Please email your CV to me or directly apply our projects online:
-    <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35930">Project1</A>,
-    <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=35920">Project2</A>,
-    <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=36506">Project3</A>,
-    <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/description/?projectid=36392">Project4</A>.
+    I am <b>recruiting PhD students</b> in UoM! All the knowledge graph related topics are very welcomed. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
 </P>
 
-<P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM, funded by the following EPSRC OntoEm project. Email me your CV if you have interests.</P>
+<P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM. Email me your CV or apply <A href="https://www.jobs.manchester.ac.uk/Job/JobDetail?JobId=27858">here</A>.</P>
 
 <h4>Research Grants and Projects</h4>
 <p><ul>
@@ -112,18 +108,24 @@ My research interests focus on knowledge graphs (including ontologies):
 <p><ul>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 -- now)</li>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
-<li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li>
+<!--<li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li> -->
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- 2023).</li>
 <li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022, 2023. </li>
 <li style="margin-bottom:5px">Guest Editor of the Journal of Web Semantics special issue <A href="https://www.journals.elsevier.com/journal-of-web-semantics/call-for-papers/automating-knowledge-graph-construction">"Automating Knowledge Graph Construction"</A>.</li>
 <li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
-<li style="margin-bottom:5px">PC/SPC of many conferences including IJCAI, AAAI, ISWC, WWW, ACL, EMNLP, KDD, ECML-PKDD, CIKM, ESWC, OM, NeSy, CCKS, etc.</li>
+<li style="margin-bottom:5px">Senior PC: IJCAI'20, IJCAI'21, CIKM'23, ESWC'23</li>
+<li style="margin-bottom:5px">PC/reviewer: ISWC'2017, WWW'2017, AAAI'17, ISWC'18, IJCAI'19, ISWC'19,
+                                    WWW'19, ISWC'20, AAAI'20, ECAI'20, ACL'20, ECML-PKDD'20, WWW'20, AAAI'21, ECML-PKDD'21, CIKM'21,
+                                    ESWC'22, ECML-PKDD'22, WWW'22, AAAI'22, IJCAI'22, EMNLP'22, ISWC'22, ACL'22,
+                                    OM'23, AAAI'23, IJCAI'23, ISWC'23, EMNLP'23, NeSy'23, CCKS'23, VLDB TaDA'23,
+                                    AAAI'24, WWW'24, NeSy'24, ICDE'24, WWW PromptEng'24, IJCAR'24, OM'24, ISWC'24, VLDB TaDA'24, etc.</li>
+    <li style="margin-bottom:5px">Reviewer of journals: Semantic Web, Journal of Web Semantics, ACM Transactions on the Web, Knowledge-based Systems, World Wide Web, Neurosymbolic Artificial Intelligence, Journal of Biomedical Semantics, Big Data Research, etc.</li>
 </ul></p>
 
 <h4> Industrial Activities</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Member of <A href="https://sirius-labs.no/data-science/">SIRIUS Centre for Scalable Data Access </A> in Norway. (11/2017 - now) </li>
+    <li style="margin-bottom:5px">Associate member of <A href="https://sirius-labs.no/data-science/">SIRIUS Centre for Scalable Data Access </A> in Norway. (11/2017 - 12/2023) </li>
 <li style="margin-bottom:5px">Consultant on knowledge graph construction (in collaboration with Xi Chen), Jarvis Lab of Tencent Technology, Shenzhen, China. (03/2020 - 02/2021)</li>
 <li style="margin-bottom:5px">Consultant, Oxford Semantic Technology, Oxford, UK. (12/2019 - 02/2020)</li>
 <li style="margin-bottom:5px">Enterprise Fellow of MPLS Division of University of Oxford. (10/2019 - 09/2020)</li>
@@ -152,6 +154,7 @@ My research interests focus on knowledge graphs (including ontologies):
 </ul></p>
 <h4>Selective Conference/Workshop Publications</h4>
 <p><ul>
+    <li style="margin-bottom: 5px">Nan Hu, Jiaoyan Chen, Yike Wu, Guilin Qi, Sheng Bi, Tongtong Wu, Jeff Z Pan "Benchmarking Large Language Models in Complex Question Answering Attribution using Knowledge Graphs". Under work. <A href="https://arxiv.org/abs/2401.14640">Pre-print</A></li>
     <li style="margin-bottom: 5px">Yuan He, Zhangdie Yuan, Jiaoyan Chen, Ian Horrocks. "Language Models as Hierarchy Encoders". Under work. <A href="https://arxiv.org/abs/2401.11374">Pre-print</A></li>
     <li style="margin-bottom: 5px">Yuxia Geng, Jiaoyan Chen, Yuhang Zeng, Zhuo Chen, Wen Zhang, Jeff Z Pan, Yuxiang Wang, Xiaoliang Xu. "Prompting Disentangled Embeddings for Knowledge Graph Completion with Pre-trained Language Model". Under work. <A href="https://arxiv.org/abs/2312.01837">Pre-print</A> </li>
     <li style="margin-bottom: 5px">Mathias Jackermeier, Jiaoyan Chen, Ian Horrocks. "Dual Box Embeddings for the Description Logic EL++". The Web Conference 2024. <A href="https://arxiv.org/abs/2301.11118">Pre-print</A>, <A href="https://github.com/KRR-Oxford/BoxSquaredEL">Github</A> </li>
@@ -223,13 +226,14 @@ My research interests focus on knowledge graphs (including ontologies):
 <li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
 </ul></p>
 
-<h4>Student (Co-)Supervision</h4>
+<h4>Students</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, to start in 04/2024)</li>
-    <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD student from Xi'an Jiaotong University, to start in 12/2023)</li>
+    <li style="margin-bottom:5px">Ian Hyland (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
+    <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
    <!-- <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li> -->
-    <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 11/2022 - now)</li>
-    <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - now)</li>
+    <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 11/2022 - )</li>
+    <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - 12/2025)</li>
+    <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - )</li>
     <li style="margin-bottom:5px">Yuan He (PhD, Department of Computer Science, University of Oxford, 2020 - now)</li>
     <br/>
     <li style="margin-bottom:5px"><A href="https://genggengcss.github.io/">Yuxia Geng</A> (PhD, College of Computer Science and Technology, Zhejiang University, 2018 - 2023)</li>
