--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
 
 <P>
-    I'm a permanent Lecturer (Assistant Professor) in Department of Computer Science, University of Manchester, and also act as a part-time Senior Researcher in Department of Computer Science, University of Oxford.
+    I'm a Lecturer (Assistant Professor) in Department of Computer Science, The University of Manchester, and also work as a part-time Senior Researcher in Department of Computer Science, University of Oxford.
 </P>
 
 <P>
-Before that, I was a full-time Senior Researcher at Department of Computer Science, University of Oxford, reporting to <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>,
+Before that, I was a full-time Senior Researcher at Department of Computer Science, University of Oxford (in the group of <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>),
 and worked very shortly as a PostDoctoral Researcher in GIScience in Heidelberg University.
     My Ph.D in Computer Science and Technology was awarded in Zhejiang University in 2016 for the research on learning and reasoning for spatio-temporal data, and my Bachelor degree in Computer Science and Technology was awarded in Zhejiang University as well in 2011.
     I was a visiting student of Department of Informatics, Zurich University from 2014 to 2015.
@@ -53,30 +53,29 @@ and worked very shortly as a PostDoctoral Researcher in GIScience in Heidelberg 
 
 <h4>Research Interests</h4>
 <P>
-My research interests focus on knowledge graphs (including ontologies):
+My research interests focus on:
 </P>
 
 <p><ul>
 
 
-<li style="margin-bottom:5px"> <b>Knowledge Graph Construction</b>: the embedding, alignment, completion, population, quality assurance of knowledge graphs.
+<li style="margin-bottom:5px"> <b>Neural-symbolic Knowledge Representation and Reasoning</b>: the embedding, inference, construction and curation of knowledge graphs and OWL ontologies.
 </li>
 
-    <li style="margin-bottom:5px"> <b>Semantic Table Understanding</b> with knowledge graphs and machine learning.
-    </li>
-<li style="margin-bottom:5px"> <b>Language Model</b>: exploring language models for constructing knowledge graphs, and supporting semantic embedding and reasoning.
+
+<li style="margin-bottom:5px"> <b>Language Model and Data Intensive Systems</b>: augmenting large language models (LLMs) with knowledge graphs, ontologies and data lakes; retrieval augmented generation (RAG); natural language inference.
 
 </li>
 
     <li style="margin-bottom:5px"><b>Machine Learning</b>:
-        knowledge-aware zero-shot and transfer learning, inductive knowledge graph completion, knowledge-augmented explanation.
+        knowledge-aware zero-shot, few-shot and transfer learning; knowledge graph and ontology embedding.
 </li>
 </ul>
 
 </p>
 
 <P>
-    I am <b>recruiting PhD students</b> in UoM! All the knowledge graph related topics are very welcomed. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
+    I am <b>recruiting PhD students</b> in UoM. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
 </P>
 
 <P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM. Email me your CV or apply <A href="https://www.jobs.manchester.ac.uk/Job/JobDetail?JobId=27858">here</A>.</P>
@@ -99,9 +98,8 @@ My research interests focus on knowledge graphs (including ontologies):
 </p>
 
 <p>
-    I'm also working on the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">personal knowledge graph construction</A>
-    project funded by Samsung Research UK and the e-commerce taxonomy curation projection funded by eBay. I have finished working for quite a few knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
-    project of the Alan Turing Institute.
+    I'm also working on the e-commerce taxonomy curation projection funded by eBay in University of Oxford. I have finished working for several knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
+    project of the Alan Turing Institute, and the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">knowledge graph construction</A> project funded by Samsung Research UK.
 </p>
 
 <h4>Academic Services</h4>
@@ -112,7 +110,7 @@ My research interests focus on knowledge graphs (including ontologies):
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- 2023).</li>
 <li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022, 2023. </li>
 <li style="margin-bottom:5px">Guest Editor of the Journal of Web Semantics special issue <A href="https://www.journals.elsevier.com/journal-of-web-semantics/call-for-papers/automating-knowledge-graph-construction">"Automating Knowledge Graph Construction"</A>.</li>
-<li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022).</li>
+<li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022, 2023).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
 <li style="margin-bottom:5px">Senior PC: IJCAI'20, IJCAI'21, CIKM'23, ESWC'23</li>
 <li style="margin-bottom:5px">PC/reviewer: ISWC'2017, WWW'2017, AAAI'17, ISWC'18, IJCAI'19, ISWC'19,
@@ -221,7 +219,8 @@ My research interests focus on knowledge graphs (including ontologies):
 <h4>Teaching</h4>
 <p><ul>
     <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". Department of Computer Science, The University of Manchester. 2023-2024. </li>
-<li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/teaching/courses/2021-2022/ai/">"Artificial Inteligence"</A>. Department of Computer Science, University of Oxford. Group Class Teaching. Hilary Term 2022. </li>
+    <li style="margin-bottom:5px">"Knowledge Graph (English)". Southeast University. Guest Lecture. Summer 2023. </li>
+<li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/teaching/courses/2021-2022/ai/">"Artificial Intelligence"</A>. Department of Computer Science, University of Oxford. Group Class Teaching. Hilary Term 2022. </li>
 <li style="margin-bottom:5px">"Knowledge Representation and Reasoning (English)". Southeast University. Guest Lecture. 2021-2022, 2022-2023. </li>
 <li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
 </ul></p>
@@ -231,10 +230,10 @@ My research interests focus on knowledge graphs (including ontologies):
     <li style="margin-bottom:5px">Ian Hyland (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
    <!-- <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li> -->
-    <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 11/2022 - )</li>
+    <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 09/2022 - )</li>
     <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - 12/2025)</li>
     <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - )</li>
-    <li style="margin-bottom:5px">Yuan He (PhD, Department of Computer Science, University of Oxford, 2020 - now)</li>
+    <li style="margin-bottom:5px">Yuan He (PhD, Department of Computer Science, University of Oxford, 2020 - )</li>
     <br/>
     <li style="margin-bottom:5px"><A href="https://genggengcss.github.io/">Yuxia Geng</A> (PhD, College of Computer Science and Technology, Zhejiang University, 2018 - 2023)</li>
     <li style="margin-bottom:5px"><A href="https://sirius-labs.no/erik-bryhn-myklebust-phd-candidate/">Erik Bryhn Myklebust</A> (PhD, NIVA & SIRIUS, University of OSLO, 2019 - 2022) (external co-supervisor)</li>
